test/tests/stages/18_structures/valid/params_and_returns/return_incomplete_type.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[5]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: increment_struct
        List[1]: 
          TIdentifier: param
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: s
              Bool: 0
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arg
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: val
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: increment_struct
                      List[1]: 
                        CVar: 
                          TIdentifier: arg
                          None: 
                      None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: val
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: b
                      CVar: 
                        TIdentifier: val
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: increment_struct
        List[1]: 
          TIdentifier: param
        CB: 
          List[3]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: a
                    CVar: 
                      TIdentifier: param
                      None: 
                    None: 
                  CBinary: 
                    CAdd: 
                    CDot: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: param
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: b
                    CVar: 
                      TIdentifier: param
                      None: 
                    None: 
                  CBinary: 
                    CAdd: 
                    CDot: 
                      TIdentifier: b
                      CVar: 
                        TIdentifier: param
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: param
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Structure: 
              TIdentifier: s
              Bool: 0
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
