test/tests/stages/18_structures/invalid_types/initializers/initialize_static_struct_with_zero.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 0
            None: 
          None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        None: 
